[package]
name = "rustintro"
version = "0.1.0"
authors = ["Jêrome Rx <jerome@eventuallyconsultant.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.13.0"
async-std = { version = "1.6.2", features = ["attributes"] }
itertools = "0.9.0"
rayon = "1.3.1"
redis = { version =  "0.17.0" }
futures = "0.3.5"
mobc-redis = "0.5.3"
mobc = "0.5.12"
rand = "0.7.3"
