[package]
name = "rustintro"
version = "0.1.0"
authors = ["Jêrome Rx <jerome@eventuallyconsultant.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.13.0"
async-std = { version = "1.6.3", features = ["attributes"] }
redis = { version =  "0.17.0", features=["async-std"] }
mobc-redis = "0.5.3"
mobc = { version = "0.5.12", features = ["async-std"] }

itertools = "0.9.0"
rayon = "1.4.0"
rand = "0.7.3"
qrcode =  "0.12.0"
image =  "0.23.9"
yew = "0.17.3"
